Fixing an overflow bug.

--- a/www/src/features/portfolio/one-up/one-up.less
+++ b/www/src/features/portfolio/one-up/one-up.less
@@ -23,7 +23,7 @@ section.one-up {
         height: 100%;
         flex: 0 0 auto;
         overflow-x: hidden;
-        overflow-y: auto;
+        overflow-y: hidden;
         box-sizing: border-box;
         padding-bottom: @size_nav;
     }
@@ -131,6 +131,10 @@ section.one-up {
 
         div.copy {
             width: 100%;
+        }
+
+        .viewport {
+            overflow-y: auto;
         }
 
     }
